--- a/Manuscript.tex
+++ b/Manuscript.tex
@@ -177,27 +177,27 @@ Ecology and Environmental Science, Biodiversity Research Institute
 
         
 \begin{abstract}
-This study provides a reassessment of the use of Magnesium to Calcium
-(Mg/Ca) ratios in Atlantic limpet shells to determine past sea surface
+This study provides a reassessment of Magnesium to Calcium (Mg/Ca)
+ratios in Atlantic limpet shells to determine past sea surface
 temperatures (SST). While \emph{Patella depressa} along the Spanish
 shoreline has repeatedly produced reliable correlations between SST and
-Mg/Ca ratios, this is not the case for other patelloid species.
-\emph{Patella vulgata}, \emph{Nacella deaureata}, and \emph{Nacella
-magellanica} have been studied using Mg/Ca with mixed or contrary
-results. In this study, we present elemental maps of various such
-species together with stable oxygen isotope values that confirm a good
-relationship with SST. Our dataset also reassesses a specimen which was
-previously unsuccessful in providing significant correlations between
-\(\delta\)\textsuperscript{18}O and Mg/Ca ratios. By reassessing these
-species and including modern and archaeological samples (n=12) from
-three patelloid species (\emph{P. vulgata}, \emph{N. deaureata}, and
-\emph{N. magellanica}) we further add to the growing set of evidence for
-the reliable use of Mg/Ca ratios to detect palaeotemperature change. As
-a result, these species can in the future serve as a means to determine
-ontogenetic age and season of capture as well as to reveal locations of
-interest within the growth record (i.e.~annual temperature minima and
-maxima) for the targeted analysis using \(\delta\)\textsuperscript{18}O
-or clumped oxygen isotope analysis.
+Mg/Ca ratios, this relationship is not the case for other patelloid
+species. \emph{Patella vulgata}, \emph{Nacella deaureata}, and \emph{N.
+magellanica} have been studied using Mg/Ca ratios with mixed or contrary
+results. In this study, we present elemental maps of these three species
+together with oxygen isotope ratios (\$\delta\&\textsuperscript{18}O)
+that confirm a good relationship with SST. Our dataset also reassesses a
+specimen which was previously unsuccessful in providing significant
+correlations between \(\delta\)\textsuperscript{18}O values and Mg/Ca
+ratios. By reassessing these species and including modern and
+archaeological specimens (n=12) from three patelloid species (\emph{P.
+vulgata}, \emph{N. deaureata}, and \emph{N. magellanica}) we further add
+to the growing set of evidence for the reliable use of Mg/Ca ratios to
+detect palaeotemperature change. As a result, these species can in the
+future serve to determine ontogenetic age and season of capture as well
+as to reveal locations of interest within the growth record (i.e.~annual
+temperature minima and maxima) for the targeted analysis using
+\(\delta\)\textsuperscript{18}O and clumped isotope analysis.
 \end{abstract}
 
 
@@ -212,26 +212,28 @@ or clumped oxygen isotope analysis.
     
 \section{Introduction}\label{Introduction}
 
-Limpet shells are commonly found within archaeological sites and and
-past shorelines due to their robust carbonate structure and the
-long-term use of limpets as a marine food source \citep{Robson2023-oz}.
-They have successfully been studied in the past in the context of
-coastal subsistence economies, site occupation on seasonal
+Limpet shells are commonly found within archaeological sites and past
+shorelines due to their robust carbonate structure and the long-term use
+of limpets as a marine food source \citep{Robson2023-oz}. They have been
+successfully studied in the context of coastal subsistence economies and
+site occupation on seasonal
 \citep{Shackleton1973-ij, Parker2018-wf, Bosch2018-ud} or long-term
-scale \citep{Ortiz2015-mr}, as well as palaeotemperature
+scales \citep{Ortiz2015-mr}, as well as archives of palaeotemperature
 \citep{Fenger2007-gf, Surge2012-ba, Wang2012-ee, Colonese2012-ct, Ferguson2011-zl}.
-Determining past sea surface temperature (SST) change largely relies on
-the measurement of \(\delta\)\textsuperscript{18}O-values within the
-calcitic parts of the shell, but attempts have been made to also use
-elemental ratios, such as magnesium to calcium (Mg/Ca)
-\citep{Graniero2017-io, Ferguson2011-zl}, to have an alternative
-measure, that potentially provides a more accurate SST estimate than
-\(\delta\)\textsuperscript{18}O-values, which are also affected by
-changes in salinity. In addition, the data acquisition of elemental
-ratios --- either through laser-ablation-isotope-ratio-mass-spectrometry
-(LA-ICP-MS) or laser induced breakdown spectroscopy (LIBS), can be much
-faster and cost-effective, increasing the number of specimens that can
-be studied overall \citep{Durham2017-fh, Hausmann2023-ih}.
+Determining past sea surface temperature (SST) change recorded in
+patelloid limpet shells largely relies on the measurement of
+\(\delta\)\textsuperscript{18}O values within the calcitic parts of the
+shell, but attempts have been made to also use elemental ratios, such as
+magnesium to calcium (Mg/Ca) ratios
+\citep{Graniero2017-io, Ferguson2011-zl}, to have an alternative measure
+that potentially provides a more accurate SST estimate than
+\(\delta\)\textsuperscript{18}O-values,as the latter proxy is affected
+by changes in the mixing of fresh- and saltwater. In addition, the data
+acquisition of elemental ratios --- either through
+laser-ablation-isotope-ratio-mass-spectrometry (LA-ICP-MS) or laser
+induced breakdown spectroscopy (LIBS), can be much faster and
+cost-effective, increasing the number of specimens that can be studied
+overall \citep{Durham2017-fh, Hausmann2023-ih}.
 
 Problematically, links between Mg/Ca ratios and SST changes in many
 marine mollusc shells, including limpets, have shown to be unreliable
@@ -240,30 +242,30 @@ This is particularly the case where there is little available additional
 information on metabolic processes, organic components of the shell
 matrix, intra-increment and intra-shell variability, and growth rates,
 which can independently and unpredictably affect Mg/Ca ratios and
-confound their interpretation as temperature proxy. Confusingly, in some
-cases multiple different temperature equations have been found for the
-same species (see Freitas \emph{et al}. \citeyearpar{Freitas2012-tx} and
-Vihtakari \emph{et al}. \citeyearpar{Vihtakari2017-wd} and references
-therein). Coeval specimens sharing one locality can also show
+confound their interpretation as a temperature proxy. Confusingly, in
+some cases multiple different temperature equations have been found for
+the same species (see Freitas \emph{et al}. \citeyearpar{Freitas2012-tx}
+and Vihtakari \emph{et al}. \citeyearpar{Vihtakari2017-wd} and
+references therein). Coeval specimens sharing one locality can also show
 differences in their relation to SST \citep{Hausmann2019-fi}. Where the
-use of Mg/Ca as a palaeotemperature proxy was successful, anomalous
-patterns in some specimens had still to be filtered out by hand,
+use of Mg/Ca ratios as a palaeotemperature proxy was successful,
+anomalous patterns in some specimens had to be filtered out by hand,
 reducing the overall robustness of the results of those successful
 studies \citep{Ferguson2011-zl}.
 
-While recent research particularly of \emph{Patella} sp. in the
-Mediterranean and Southwest Europe have provided promising results
+Recent research particularly of \emph{Patella} spp. in the Mediterranean
+and southwest Europe have provided promising results
 \citep{Hausmann2019-fi, Garcia-Escarzaga2015-jc, Garcia-Escarzaga2018-nf}.
-There remains a lack of clarity for Atlantic limpet species,
-particularly since it was last shown here, that they are not reliable
-recorders of palaeotemperature \citep{Graniero2017-io}.
+However, there remains a lack of clarity for Atlantic limpet species,
+particularly since it was shown, that the Mg/Ca ratio in their shells
+are not reliable recorders of palaeotemperature \citep{Graniero2017-io}.
 
 In this study we will repeat and expand the analysis of Atlantic limpets
 to determine the reliability of Mg/Ca ratios as palaeotemperature
 proxies. To do this, we sampled a set of previously published and
 unpublished limpet specimens dating to modern and archaeological
 contexts using LIBS. LIBS allows us to carry out 2D imaging of entire
-shell sections, which helps us to navigate the complex elemental
+shell sections, which allows navigation of the complex elemental
 structure of the shell and better separate the external,
 temperature-related changes from the internal and less understood
 factors that influence the Mg/Ca ratio. By working with already
@@ -271,9 +273,9 @@ published datasets, we were able to simultaneously avoid costs for new
 high-resolution \(\delta\)\textsuperscript{18}O-data, to use real-world
 examples, and to also provide pilot-data for areas of existing research
 interest. Generally establishing the usefulness and reliability of Mg/Ca
-as SST proxy in limpets should help to provide a platform for such
-future research and an important stepping stone to a better
-understanding of elemental ratios in other marine mollusc shells.
+ratios as SST proxy in limpets provides a platform for future research
+and an important steppingstone to a better understanding of elemental
+ratios in other marine mollusc shells.
 
 \section{Materials and Methods}\label{Methods}
 
@@ -334,16 +336,18 @@ Previous analyses
 \bottomrule\noalign{}
 \endlastfoot
 Modern & \citep{Nicastro2020-ih} & \emph{N. deaureata} & Cambaceres Bay
-& ND-1016-3 & Stable oxygen \\
-& & & - Tierra del & ND-1016-4 & and carbon \\
-& & \emph{N. magellanica} & Fuego (AR) & NM-1016-1 & isotope analysis \\
+& ND-1016-3 & \(\delta\)\textsuperscript{18}O and
+\(\delta\)\textsuperscript{13}C \\
+& & & - Tierra del & ND-1016-4 & analysis \\
+& & \emph{N. magellanica} & Fuego (AR) & NM-1016-1 & \\
 & & & & NM-1016-3 & \\
 & & & & & \\
 & \citep{Graniero2017-io} & \emph{P. vulgata} & Rack Wick Bay - &
-ORK-LT5 & Stable oxygen \\
-& & & Westray (UK) & & and carbon \\
-& & & & & isotope analysis; \\
+ORK-LT5 & \(\delta\)\textsuperscript{18}O and
+\(\delta\)\textsuperscript{13}C \\
+& & & Westray (UK) & & analysis; \\
 & & & & & Mg, Li, Sr, Ca. \\
+& & & & & \\
 & & & & & \\
 Archaeological & \citep{Surge2012-ba} & \emph{P. vulgata} & Rack Wick
 Bay - & QG1-7188-1 & Stable oxygen \\
@@ -357,22 +361,24 @@ Bay - & QG1-7188-1 & Stable oxygen \\
 
 \normalsize
 
-There are two main locations that we sourced specimens from: the Beagle
-Channel in Tierra del Fuego (Argentina) and the island of West Ray in
-Orkney (UK). Four modern specimens were collected from the Beagle
-Channel in Cambaceres Bay in October 2016. The area receives around 570
-mm precipitation but the channel waters are predominantly influenced by
-marine currents and in the period of October 2015 to October 2016 stayed
-around 30.7 ± 0.7 psu \citep{Nicastro2020-ih}. SSTs range from 4.7ºC in
-August to 10ºC in February (Figure~\ref{fig-SSTs} - red).
+Specimens were sourced from two main locations: the Beagle Channel in
+Tierra del Fuego (Argentina) and the island of West Ray in the Orkney
+archipelago of Scotland (UK). Four modern specimens were collected from
+the Beagle Channel in Cambaceres Bay in October 2016. The area receives
+around 570 mm of precipitation, but the channel waters are predominantly
+influenced by marine currents and in the period of October 2015 to
+October 2016 stayed around 30.7 ± 0.7 psu (practical salinity units)
+\citep{Nicastro2020-ih}. SSTs range from 4.7ºC in August to 10ºC in
+February (Figure~\ref{fig-SSTs} -- red line).
 
 On Westray one modern shell (ORK-LT5) was collected in Rack Wick Bay in
-August 2009 and has previously been analysed using stable carbon and
-oxygen isotopes, as well as LA-ICP-MS \citep{Graniero2017-io}. Westray
-lies about 70 km north of the Scottish mainland and experiences
-virtually no freshwater input with salinity values of 34.0 -- 34.5 psu
+August 2009 and has been previously analysed for
+\(\delta\)\textsuperscript{18}O and \(\delta\)\textsuperscript{13}C
+values, as well as LA-ICP-MS \citep{Graniero2017-io}. Westray lies about
+70 km north of the Scottish mainland and experiences virtually no
+freshwater input with salinity values of 34.0 -- 34.5 psu
 \citep{Inall2009-ho}. The annual SST ranges from 6.3ºC in March to
-13.8ºC in August (Figure~\ref{fig-SSTs} - blue).
+13.8ºC in August (Figure~\ref{fig-SSTs} -- blue line).
 
 \begin{figure}[H]
 
@@ -387,35 +393,37 @@ from years. SST values were sourced from \citet{Good2020-nl}.}
 
 \end{figure}%
 
-We also studied 7 archaeological specimens of \emph{P. vulgata} coming
-from Quoygrew on Westray dating to 900 -- 1200 CE. These shells have
+We also studied 7 archaeological specimens of \emph{P. vulgata} from the
+Quoygrew site on Westray dating to 900 -- 1200 CE. These shells have
 previously been studied to characterise seasonal temperature change
-during the Medieval Climate Anomaly and the Little Ice Age
+during the Medieval Climate Anomaly (810 -- 1229 CE)
 \citep{Surge2012-ba}. Together they show a range of lifespans, with some
-comparatively long for their size (QG1-7246-1, 12 years within 16 mm of
-growth) making them particularly susceptible to time-averaging. That
-said, the majority are under 5 years old.
+comparatively long lived for their size (QG1-7246-1, 12 years within 16
+mm of growth) making them particularly susceptible to within-shell
+time-averaging because of slow growth rates. That said, the majority are
+under 5 years old yielding sufficiently fast growth to nearly capture
+seasonal amplitudes of SST.
 
 \subsection{Methods}\label{methods}
 
 \subsubsection{Mg/Ca ratios}\label{mgca-ratios}
 
-Mg/Ca elemental imaging was carried out using Laser Induced Breakdown
-Spectroscopy at the Leibniz Zentrum für Archäologie (Mainz-Germany)
-using previously published methods \citep{Hausmann2023-ih}. These
-involve the ablation of the shell section using an infrared (1064 nm)
-laser (1--2 mJ, 100 Hz) onto a surface area of 20--30 µm to generate a
-plasma plume. This plume emits light, which is measured using a
-synchronised spectrometer (delay time = 0.5 µs, integration time = 1
-µs). The resulting light spectrum quantifies the emission lines of
-Magnesium (MgII; 279.553 nm) and Calcium (CaII; 315.887 nm) to determine
-their intensity ratio. While these two peaks alone do not represent the
-molar concentrations of both elements (as opposed to calibration free
-LIBS; e.g. \citep{Martinez-Minchero2022-jz}), the intensity ratio is
-linearly correlated to the molar concentration \citep{Hausmann2017-oa}
-and can be used as a reliable indicator of Mg/Ca changes within the
-shell carbonate. All values reported here at in arbitrary units based on
-the ratio of intensities of the peaks above.
+Mg/Ca elemental imaging was carried out using LIBS at the Leibniz
+Zentrum für Archäologie (Mainz-Germany) following previously published
+methods \citep{Hausmann2023-ih}. The imaging involves the ablation of
+the shell section using an infrared (1064 nm) laser (1--2 mJ, 100 Hz)
+onto a surface area of 20--30 µm to generate a plasma plume. This plume
+emits light, which is measured using a synchronised spectrometer (delay
+time = 0.5 µs, integration time = 1 µs). The resulting light spectrum
+quantifies the emission lines of Magnesium (MgII; 279.553 nm) and
+Calcium (CaII; 315.887 nm) to determine their intensity ratio. While
+these two peaks alone do not represent the molar concentrations of both
+elements (as opposed to calibration free LIBS; e.g.
+\citep{Martinez-Minchero2022-jz}), the intensity ratio is linearly
+correlated to the molar concentration \citep{Hausmann2017-oa} and can be
+used as a reliable indicator of Mg/Ca variation within the shell
+carbonate. All values reported here are in arbitrary units based on the
+ratio of intensities of the peaks above.
 
 Using this system we carried out elemental imaging of the shell
 specimens at a resolution of 50--100 µm distance between sampling spots.
@@ -431,10 +439,10 @@ oxygen isotope analysis left an uneven sample surface introducing
 variability in the plasma generation and thus uncertainty in the data of
 these locations.
 
-\subsubsection{Oxygen isotopes}\label{oxygen-isotopes}
+\subsubsection{Oxygen isotope ratios}\label{oxygen-isotope-ratios}
 
-High-quality oxygen isotope values (\(\delta\)\textsuperscript{18}O)
-were acquired from previous publications on \emph{P. vulgata}
+High-quality \(\delta\)\textsuperscript{18}O values were acquired from
+previous publications on \emph{P. vulgata}
 \citep{Surge2012-ba, Graniero2017-io}, \emph{N. deaureata} and \emph{N.
 magellanica} \citep{Nicastro2020-ih}, in which detailed descriptions of
 the stable isotope analysis methodology can be found. In short, all
@@ -522,6 +530,7 @@ of aragonite and is seen in Figure~\ref{fig-Pat_LIBS} in grey, as its
 Mg/Ca intensity ratio consistently falls below the range of interest
 (0.2 and above). Compared to other patelloid shells, some of whose
 interior is almost entirely made of aragonite, this layer is very thin.
+\newline
 
 \begin{figure}[H]
 
@@ -532,7 +541,7 @@ interior is almost entirely made of aragonite, this layer is very thin.
 }
 
 \caption{\label{fig-Pat_LIBS}Example LIBS maps and line scans of
-analysed specimens. (\emph{a+b}) ORK-LT and (\emph{c}+\emph{d})
+analysed specimens. (\emph{a+c}) ORK-LT and (\emph{b}+\emph{d})
 QG1-7188-1. Note that the ranges of Mg/Ca intensity ratios are not
 identical but are chosen arbitrarily to increase contrast. Areas in grey
 consist of low-Mg aragonite and fall outside the chosen colour-range.}
