--- a/bibliography.bib
+++ b/bibliography.bib
@@ -11,6 +11,16 @@
   issn    = "0305-4403"
 }
 
+@misc{Hausmann_2024OSF,
+  title={Confirmation of Mg/Ca ratios as palaeothermometers in Atlantic limpet shells},
+  url={osf.io/jq9mx},
+  DOI={10.17605/OSF.IO/JQ9MX},
+  publisher={OSF},
+  author={Hausmann, Niklas},
+  year={2024},
+  month={Jul}
+}
+
 @ARTICLE{Flohr2016-xs,
   title       = "Evidence of resilience to past climate change in Southwest
                  Asia: Early farming communities and the 9.2 and 8.2 ka events",
